// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Project/> Snapshot renders without crashing using mount 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 300px;
}

.c0 :first-child {
  width: 100px;
  height: 100px;
}

<Project>
  <styled.div>
    <div
      className="c0"
    >
      <div />
    </div>
  </styled.div>
</Project>
`;

exports[`<Project/> Snapshot renders without crashing using render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 300px;
}

.c0 :first-child {
  width: 100px;
  height: 100px;
}

<div
  class="c0"
>
  <div />
</div>
`;

exports[`<Project/> Snapshot renders without crashing using shallow 1`] = `
<styled.div>
  <div />
</styled.div>
`;
